# cmcrameri

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: publish.yml  pypi.yml  pythonpackage.yml  test-publish.yml  tests.yml
cmcrameri/: __init__.py  _cm.py  cm.py
cmcrameri/cmaps/: acton.txt  bamako.txt  batlowK.txt  batlowKS.txt  batlowWS.txt  bilbao.txt  glasgow.txt  glasgowS.txt  grayC.txt  lajolla.txt  lipari.txt  lipariS.txt  managua.txt  navia.txt  naviaS.txt  tokyo.txt
tests/: test_cmcrameri.py
