[build-system]
requires = ["setuptools>=41.2", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    "F", # flakes
    "I", # import sorting
    "U", # upgrade
]
target-version = "py37"
line-length = 120

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["E402"]
