[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=41.2",
  "setuptools-scm",
  "wheel",
]

[project]
name = "cmcrameri"
description = "Perceptually uniform colormaps by Fabio Crameri"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Callum Rollo", email = "c.rollo@outlook.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "matplotlib",
  "numpy",
  "packaging",
]
urls.documentation = "https://github.com/callumrollo/cmcrameri"
urls.homepage = "https://pypi.org/project/cmcrameri/"
urls.repository = "https://github.com/callumrollo/cmcrameri"

[tool.setuptools]
packages = [ "cmcrameri" ]
include-package-data = true

[tool.setuptools_scm]
write_to = "cmcrameri/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.ruff]
target-version = "py37"
line-length = 120

select = [
  "F", # flakes
  "I", # import sorting
  "U", # upgrade
]
per-file-ignores."docs/conf.py" = [ "E402" ]
