[metadata]
name = cmcrameri
description = Perceptually uniform colourmaps
author = Callum Rollo
author_email = c.rollo@outlook.com
url = https://github.com/callumrollo/cmcrameri
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
keywords = colormaps, oceanography, plotting, visualization
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
install_requires =
    matplotlib
    numpy 
python_requires = >=3.6
packages = find:


[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

